--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.2.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
+    "vue-i18n": "^7.3.2",
     "vue-infinite-loading": "^2.2.1",
     "vue-router": "^3.0.1"
   },
